--- a/package.json
+++ b/package.json
@@ -89,7 +89,7 @@
   "scripts": {
     "start": "ws",
     "build": "rollup --config rollup.config.js",
-    "pack": "npm run build && npm pack",
+    "pack": "yarpm run build && yarpm pack",
     "version": "yarpm run build && yarpm run generate-docs && git add -A dist docs",
     "pretest": "yarpm run build",
     "test": "yarpm run test-node && yarpm run test-saucelabs",
